--- a/1.ipynb
+++ b/1.ipynb
@@ -10,12 +10,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "palak\n"
+      "palakpalakpalak\n"
      ]
     }
    ],
    "source": [
-    "print(\"palak\")\n",
+    "a=\"palak\"\n",
+    "print(3*a)\n",
     "\n"
    ]
   },
@@ -23,6 +24,14 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "6d428cca-342f-4bae-9317-4ed5447a32ef",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ddf9a52f-82ba-4ea3-ae5d-e3fe90ac414f",
    "metadata": {},
    "outputs": [],
    "source": []
