--- a/Assignment4.ipynb
+++ b/Assignment4.ipynb
@@ -201,22 +201,22 @@
    "source": [
     "import numpy as np\n",
     "\n",
-    "Baghel = np.linspace(10, 100, 25)\n",
+    "palak = np.linspace(10, 100, 25)\n",
     "\n",
-    "print(\"Array:\", Baghel)\n",
-    "print(\"Dimensions:\", Baghel.ndim) \n",
-    "print(\"Shape:\", Baghel.shape)  \n",
-    "print(\"Total Elements:\", Baghel.size)  \n",
-    "print(\"Data Type of Elements:\", Baghel.dtype)  \n",
-    "print(\"Total Bytes Consumed:\", Baghel.nbytes)  \n",
+    "print(\"Array:\", palak)\n",
+    "print(\"Dimensions:\", palak.ndim) \n",
+    "print(\"Shape:\", palak.shape)  \n",
+    "print(\"Total Elements:\", palak.size)  \n",
+    "print(\"Data Type of Elements:\", palak.dtype)  \n",
+    "print(\"Total Bytes Consumed:\", palak.nbytes)  \n",
     "\n",
     "\n",
-    "transposed_array = Baghel.reshape(25, 1)\n",
+    "transposed_array = palak.reshape(25, 1)\n",
     "print(\"\\nTransposed using reshape():\\n\", transposed_array)\n",
     "\n",
-    "print(\"\\nTransposed using .T:\\n\", Baghel.T) \n",
+    "print(\"\\nTransposed using .T:\\n\", palak.T) \n",
     "\n",
-    "print(\"\\nIs reshaped array same as .T? :\", np.array_equal(transposed_array, Baghel.T))\n"
+    "print(\"\\nIs reshaped array same as .T? :\", np.array_equal(transposed_array, palak.T))\n"
    ]
   },
   {
@@ -240,7 +240,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Original 3x4 Array (ucs420_Baghel):\n",
+      "Original 3x4 Array (ucs420_palak):\n",
       " [[10 20 30 40]\n",
       " [50 60 70 80]\n",
       " [90 15 20 35]]\n",
@@ -264,34 +264,34 @@
     }
    ],
    "source": [
-    "ucs420_Baghel = np.array([\n",
+    "ucs420_palak = np.array([\n",
     "    [10, 20, 30, 40], \n",
     "    [50, 60, 70, 80], \n",
     "    [90, 15, 20, 35]\n",
     "])\n",
     "\n",
     "# Step 2: Compute statistics\n",
-    "mean_value = np.mean(ucs420_Baghel)     \n",
-    "median_value = np.median(ucs420_Baghel)  \n",
-    "max_value = np.max(ucs420_Baghel)        \n",
-    "min_value = np.min(ucs420_Baghel)         \n",
-    "unique_values = np.unique(ucs420_Baghel)  \n",
+    "mean_value = np.mean(ucs420_palak)     \n",
+    "median_value = np.median(ucs420_palak)  \n",
+    "max_value = np.max(ucs420_palak)        \n",
+    "min_value = np.min(ucs420_palak)         \n",
+    "unique_values = np.unique(ucs420_palak)  \n",
     "\n",
-    "reshaped_ucs420_Baghel = ucs420_Baghel.reshape(4, 3)\n",
+    "reshaped_ucs420_palak = ucs420_palak.reshape(4, 3)\n",
     "\n",
     "\n",
-    "resized_ucs420_Baghel = np.resize(ucs420_Baghel, (2, 3))\n",
+    "resized_ucs420_palak = np.resize(ucs420_palak, (2, 3))\n",
     "\n",
     "# Step 5: Print results\n",
-    "print(\"Original 3x4 Array (ucs420_Baghel):\\n\", ucs420_Baghel)\n",
+    "print(\"Original 3x4 Array (ucs420_palak):\\n\", ucs420_palak)\n",
     "print(\"\\nMean:\", mean_value)\n",
     "print(\"Median:\", median_value)\n",
     "print(\"Max Value:\", max_value)\n",
     "print(\"Min Value:\", min_value)\n",
     "print(\"Unique Elements:\", unique_values)\n",
     "\n",
-    "print(\"\\nReshaped (4x3) Array:\\n\", reshaped_ucs420_Baghel)\n",
-    "print(\"\\nResized (2x3) Array:\\n\", resized_ucs420_Baghel)\n"
+    "print(\"\\nReshaped (4x3) Array:\\n\", reshaped_ucs420_palak)\n",
+    "print(\"\\nResized (2x3) Array:\\n\", resized_ucs420_palak)\n"
    ]
   }
  ],
